crates/next-custom-transforms/tests/errors/server-actions/server-graph/15/input.js
export default function () {
  'use cache'
}

export function foo() {
  'use cache'
}

export const bar = () => {
  'use cache'
}
